--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
     <!--The bellow is the font awesome file by which we can include icons in the website through bootstrap-->
     <script src="https://kit.fontawesome.com/e631ac8968.js" crossorigin="anonymous"></script>
