--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nishant</title>
-    
+
     <link rel="icon" href="favicon2.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!--The bellow is the font awesome file by which we can include icons in the website through bootstrap-->
     <script src="https://kit.fontawesome.com/e631ac8968.js" crossorigin="anonymous"></script>
@@ -173,11 +173,11 @@
 
         <div class="container cont7">
             <div class="container-fluid cont7a">
-                <h2 style="line-height: 3;">Let us begin !</h2>
+                <h2 style="line-height: 3; text-shadow: 1px 2px #d09b93;">Let us begin !</h2>
                 <em><h5>Your first three months service is free</h5></em>
 
                 <button style="height: 60px;
-    border-radius: 0;" class="btn btn-outline-success" type="submit">Sign Up for free</button>
+    border-radius: 0; font-size: large;" class="btn btn-outline-success" type="submit">Sign Up for free</button>
 
             </div>
         </div>
